# ollamer

./: .gitignore  CLAUDE.md  DB.VARIANT.md  LICENSE  README.md
.github/workflows/: release.yml  rust.yml
ollamerctl/: Cargo.toml  README.md
ollamerctl/src/: main.rs
web/: Cargo.toml  README.md  TRANSLATE.md
web/src/: main.rs
