[package]
name = "ollamer"
version = "0.1.3"
edition = "2024"
description = "Lightweight web UI for browsing and managing local Ollama models"
license = "MIT"
repository = "https://github.com/phpclub/ollamer"
homepage = "https://github.com/phpclub/ollamer"
keywords = ["ollama", "llm", "web-ui", "models", "ai"]
categories = ["web-programming", "command-line-utilities"]
readme = "README.md"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["fs"] }
libc = "0.2"
